# py-analyser

./: .gitignore  Database.md  Dockerfile  Dockerfile-test  Dockerfile.actionRunner  Dockerfile.bak  Dockerfile.bak2  Quant-talib.Dockerfile  README.md  Runner-Dockerfile  ecosystem.config.js  main.py  pyproject.toml  requirements-dev.txt  requirements-no-talib.txt  requirements-slim.txt  requirements.txt  stock.config.js  test.py
api/: daily_basic.py  daily_candle.py  weekly_candle.py
config/: .ini  common.py
crypto/: api.py  database.py  playgroud.py
docs/: quant_db_design.sql
lib/: analytic_signals.py  analytic_signals_2.py  analytic_signals_back.py  analytic_signals_bak.py  analyze.py  bias.py  candle.py  long_analyze.py  long_signals.py  ma_analyze.py  ma_shape.py  ma_slope.py  magic_nine_turn.py  pattern_analyze.py  short_analyze.py  short_signals.py  signal_analysis.py  signals.py  util.py
models/: analytic_signals.py  cn_daily_candles.py  cn_daily_limit.py  cn_limit_list.py  daily_candles.py  daily_indicators.py  daily_kline_signals.py  daily_long_signals.py  daily_ma_signals.py  daily_pattern_signals.py  daily_short_signals.py  db.py  hk_daily_candles.py  signal_analysis.py  stock_analytic_signals.py  stock_daily_signals.py  stock_long_signals.py  stock_short_signals.py  stock_signals.py  stocks.py  trade_calendar.py  us_daily_candles.py  weekly_candles.py  weekly_indicators.py  weekly_long_signals.py  weekly_signals.py
mongo/: database.py  df.py
shell/: HK_server.sh  Mongodb_server.sh  MySQL_server.sh  hongkong.pem
src/: server.py
(+209 files in other folders)
