[tool.poetry]
name = "quant-analyser"
version = "0.1.0"
description = "Analyser jobs for stock market, crypto market."
authors = ["allenfc <forchengfei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
