[tool.poetry]
name = "quant-analyser"
version = "0.1.0"
description = "Analyser jobs for stock market, crypto market."
authors = ["allenfc <forchengfei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core=1.1.12"]
build-backend = "poetry.core.masonry.api"
